--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <header>
         <nav>
-            <h1>Find your film</h1>
-            <p>My Watchlist</p>
+            <h1><a href="index.html">Find your film</a></h1>
+            <p><a href="my-watch-list.html">Watchlist</a></p>
         </nav>
     </header>
     <section>
@@ -33,12 +33,12 @@
         </form>
     </section>
     <main>
-        <div class="container">
+        <div class="container" id="container">
             <div class="start-exploring">
                <img src="./images/Icon.png" alt="simple image of film reel">
                <p>Start exploring</p> 
             </div>
         </div>
-    </main>
+    </main>  
 </body>
 </html>
